# partition-api

./: .env.example  README.md  main.py  pyproject.toml
